# rust-app-templates

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  build.sh  css-ideas.md  run.sh
ref/: css-guidance.md  datastar-features.md
ref/datastar-docs/: index.json
ref/datastar-docs/examples/: active_search.md  animations.md  bad_apple.md  bulk_update.md  click_to_edit.md  click_to_load.md  custom_event.md  dbmon.md  delete_row.md  edit_row.md  file_upload.md  form_data.md  index.md  infinite_scroll.md  inline_validation.md  lazy_load.md  lazy_tabs.md  on_signal_patch.md  progress_bar.md  progressive_load.md  sortable.md  svg_morphing.md  templ_counter.md  title_update.md  todomvc.md  web_component.md
ref/datastar-docs/guide/: backend_requests.md  datastar_expressions.md  getting_started.md  index.md  reactive_signals.md
ref/datastar-docs/how_tos/: bind_keydown_events_to_specific_keys.md  index.md  load_more_list_items.md  poll_the_backend_at_regular_intervals.md  redirect_the_page_from_the_backend.md
ref/datastar-docs/reference/: actions.md  attributes.md  datastar_pro.md  index.md  sdks.md  security.md  sse_events.md
scripts/crawler/: README.md  crawler.py  generate_index.sh  pyproject.toml
scripts/crawler/datastar_docs_crawler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
web-app/: Cargo.toml  README.md  animate-phase-1-and-2.md  animations-phase-3-flipping-and-centering.md  animations.md  build.rs  flip-center-expand-animation-guide.md
web-app/.claude/commands/: with-datastar.md
web-app/config/: default.toml
web-app/src/: error.rs  examples_gen.rs  handlers.rs  main.rs  settings.rs  syntax_highlight.rs  telemetry.rs  templates.rs  theme.rs
web-app/src/examples/: active_search.rs  form_demo.rs  hypermedia_demo.rs  mod.rs  theme_switcher.rs
web-app/static/: styles.css
web-app/templates/: base.html  examples.html  index.html
web-app/templates/components/: card.html
web-app/templates/fragments/: backend_code.html  data_items.html  example_card.html  example_search_results.html  form_response.html  search_results.html
