[package]
name = "web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-server = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# Templating
askama = "0.14"
askama_web = { version = "0.14", features = ["axum-0.8"] }

# Hypermedia
datastar = { version = "0.3", features = ["axum"] }

# Configuration
config = { version = "0.15", features = ["toml"] }

# Common dependencies from workspace
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Observability from workspace
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing-opentelemetry = { workspace = true }

# YAML parsing
serde_yaml_ng = "0.10.0"

[build-dependencies]
serde_yaml_ng = "0.10.0"
